修改画布与选中组件的属性

--- a/src/index.css
+++ b/src/index.css
@@ -87,7 +87,7 @@ ul {
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 9999;
+  z-index: 9999999;
   font-size: 20px;
 }
 
