可以编辑文本组件的文本值

--- a/src/pages/EditPage/Center/Cmp/index.module.less
+++ b/src/pages/EditPage/Center/Cmp/index.module.less
@@ -5,6 +5,8 @@
   .inner {
     box-sizing: border-box;
     overflow: hidden;
+    // 不加下面的属性，div不识别换行
+    white-space: pre-wrap;
   }
   img {
     width: 100%;
