--- a/src/pages/EditPage/Center/Zoom/index.module.less
+++ b/src/pages/EditPage/Center/Zoom/index.module.less
@@ -1,33 +1,52 @@
-.zoom {
-  @size: 30px;
-
+.main {
   position: fixed;
-  right: 400px;
+  right: 372px;
   bottom: 20px;
 
-  display: flex;
-  height: @size;
-  line-height: @size;
-  color: #500202;
-
-  li {
-    padding: 0 4px;
-  }
-  .icon {
+  .zoom {
     @size: 30px;
-    width: @size;
+    display: flex;
     height: @size;
-    border-radius: 50%;
-    background-color: #ffe331;
-    cursor: pointer;
+    line-height: @size;
+    color: #500202;
+    background-color: wheat;
+
+    li {
+      padding: 0 4px;
+    }
+    .icon {
+      @size: 30px;
+      width: @size;
+      height: @size;
+      border-radius: 50%;
+      background-color: #ffe331;
+      cursor: pointer;
+    }
+    .num {
+      font-size: 12px;
+      input {
+        display: inline-block;
+        width: 50px;
+        border: none;
+        text-align: center;
+      }
+    }
   }
-  .num {
-    font-size: 12px;
-    input {
-      display: inline-block;
-      width: 50px;
-      border: none;
-      text-align: center;
+
+  .referenceLine {
+    position: absolute;
+    right: 0;
+    bottom: 28px;
+    padding: 4px 0px;
+    line-height: 24px;
+    border-radius: 4px;
+    background-color: white;
+    border: solid 1px #dddddd;
+    li {
+      padding: 0 12px;
+    }
+    li:hover {
+      background-color: wheat;
     }
   }
 }
