--- a/src/pages/EditPage/Center/Cmp/index.module.less
+++ b/src/pages/EditPage/Center/Cmp/index.module.less
@@ -6,7 +6,7 @@
     box-sizing: border-box;
     overflow: hidden;
     // 不加下面的属性，div不识别换行
-    white-space: pre-wrap;
+    white-space: break-spaces;
   }
   img {
     width: 100%;
