给组件加动画属性

--- a/src/pages/EditPage/RightSider/edit.module.less
+++ b/src/pages/EditPage/RightSider/edit.module.less
@@ -36,7 +36,7 @@
     border-radius: 2px;
     border: 1px solid #d6dbe1;
   }
-  .pouseAnimation {
+  .pauseAnimation {
     margin: 8px;
     padding: 10px;
     background-color: red;
