离开页面的数据清理与其它细节代码修改

--- a/src/index.css
+++ b/src/index.css
@@ -35,9 +35,9 @@ dl {
 select,
 input {
   /* min-width: 80px; */
-  min-height: 28px;
+  /* min-height: 28px;
   line-height: 28px;
-  border: solid 1px #eee;
+  border: solid 1px #eee; */
   padding: 0 6px;
   outline: none;
   box-sizing: border-box;
