可以组合组件了

--- a/src/pages/EditPage/RightSider/edit.module.less
+++ b/src/pages/EditPage/RightSider/edit.module.less
@@ -43,4 +43,21 @@
     color: white;
     font-weight: bold;
   }
+
+  .group {
+    margin: 20px 74px;
+    width: 200px;
+    height: 48px;
+    background-color: red;
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
+  }
+  .red {
+    width: 100%;
+    text-align: center;
+    font-size: 16px;
+    font-weight: bold;
+    color: red;
+  }
 }
