生成器使用 SSG渲染

--- a/builder/src/components/Cmp/index.module.css
+++ b/builder/src/components/Cmp/index.module.css
@@ -1,7 +1,7 @@
 .main {
   position: absolute;
   cursor: pointer;
-  box-sizing: content-box !important;
+  box-sizing: border-box;
   overflow: hidden;
   white-space: break-spaces;
 }
